made minor edits to comments/organization

--- a/SDWA_data_prep/sdwis_data.ipynb
+++ b/SDWA_data_prep/sdwis_data.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Identify a url for the whole table\n",
+    "# Identify a url for the request\n",
     "url = 'https://iaspub.epa.gov/enviro/efservice/SDW_VIOL_ENFORCEMENT/STATE/NJ/COMPPERBEGINDATE/>/31-DEC-11/COMPPERENDDATE/</01-JAN-17/CSV'\n",
     "r = requests.get(url)\n",
     "if r.status_code == 200:\n",
@@ -312,7 +312,7 @@
    "cell_type": "code",
    "execution_count": 127,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1183,75 +1183,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 10001 entries, 0 to 10000\n",
-      "Data columns (total 48 columns):\n",
-      "WATER_SYSTEM.PWSID                             10001 non-null object\n",
-      "WATER_SYSTEM.PWS_NAME                          9983 non-null object\n",
-      "WATER_SYSTEM.NPM_CANDIDATE                     10001 non-null object\n",
-      "WATER_SYSTEM.PRIMACY_AGENCY_CODE               10001 non-null object\n",
-      "WATER_SYSTEM.EPA_REGION                        10001 non-null int64\n",
-      "WATER_SYSTEM.SEASON_BEGIN_DATE                 9436 non-null object\n",
-      "WATER_SYSTEM.SEASON_END_DATE                   9436 non-null object\n",
-      "WATER_SYSTEM.PWS_ACTIVITY_CODE                 10001 non-null object\n",
-      "WATER_SYSTEM.PWS_DEACTIVATION_DATE             7032 non-null object\n",
-      "WATER_SYSTEM.PWS_TYPE_CODE                     10001 non-null object\n",
-      "WATER_SYSTEM.DBPR_SCHEDULE_CAT_CODE            571 non-null float64\n",
-      "WATER_SYSTEM.CDS_ID                            569 non-null float64\n",
-      "WATER_SYSTEM.GW_SW_CODE                        10000 non-null object\n",
-      "WATER_SYSTEM.LT2_SCHEDULE_CAT_CODE             33 non-null float64\n",
-      "WATER_SYSTEM.OWNER_TYPE_CODE                   7918 non-null object\n",
-      "WATER_SYSTEM.POPULATION_SERVED_COUNT           10001 non-null int64\n",
-      "WATER_SYSTEM.POP_CAT_2_CODE                    10001 non-null int64\n",
-      "WATER_SYSTEM.POP_CAT_3_CODE                    10001 non-null int64\n",
-      "WATER_SYSTEM.POP_CAT_4_CODE                    10001 non-null int64\n",
-      "WATER_SYSTEM.POP_CAT_5_CODE                    10001 non-null int64\n",
-      "WATER_SYSTEM.POP_CAT_11_CODE                   10001 non-null int64\n",
-      "WATER_SYSTEM.PRIMACY_TYPE                      10001 non-null object\n",
-      "WATER_SYSTEM.PRIMARY_SOURCE_CODE               10000 non-null object\n",
-      "WATER_SYSTEM.IS_GRANT_ELIGIBLE_IND             10001 non-null object\n",
-      "WATER_SYSTEM.IS_WHOLESALER_IND                 10001 non-null object\n",
-      "WATER_SYSTEM.IS_SCHOOL_OR_DAYCARE_IND          10001 non-null object\n",
-      "WATER_SYSTEM.SERVICE_CONNECTIONS_COUNT         10001 non-null int64\n",
-      "WATER_SYSTEM.SUBMISSION_STATUS_CODE            10001 non-null object\n",
-      "WATER_SYSTEM.ORG_NAME                          3764 non-null object\n",
-      "WATER_SYSTEM.ADMIN_NAME                        7303 non-null object\n",
-      "WATER_SYSTEM.EMAIL_ADDR                        98 non-null object\n",
-      "WATER_SYSTEM.PHONE_NUMBER                      8433 non-null object\n",
-      "WATER_SYSTEM.PHONE_EXT_NUMBER                  313 non-null float64\n",
-      "WATER_SYSTEM.FAX_NUMBER                        1638 non-null object\n",
-      "WATER_SYSTEM.ALT_PHONE_NUMBER                  2 non-null float64\n",
-      "WATER_SYSTEM.ADDRESS_LINE1                     6589 non-null object\n",
-      "WATER_SYSTEM.ADDRESS_LINE2                     6519 non-null object\n",
-      "WATER_SYSTEM.CITY_NAME                         9996 non-null object\n",
-      "WATER_SYSTEM.ZIP_CODE                          8870 non-null object\n",
-      "WATER_SYSTEM.COUNTRY_CODE                      10001 non-null object\n",
-      "WATER_SYSTEM.STATE_CODE                        10001 non-null object\n",
-      "WATER_SYSTEM.SOURCE_WATER_PROTECTION_CODE      3646 non-null object\n",
-      "WATER_SYSTEM.SOURCE_PROTECTION_BEGIN_DATE      13 non-null object\n",
-      "WATER_SYSTEM.OUTSTANDING_PERFORMER             4 non-null object\n",
-      "WATER_SYSTEM.OUTSTANDING_PERFORM_BEGIN_DATE    0 non-null float64\n",
-      "WATER_SYSTEM.CITIES_SERVED                     10001 non-null object\n",
-      "WATER_SYSTEM.COUNTIES_SERVED                   10001 non-null object\n",
-      "Unnamed: 47                                    0 non-null float64\n",
-      "dtypes: float64(7), int64(8), object(33)\n",
-      "memory usage: 3.7+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "pws_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 141,
    "metadata": {},
    "outputs": [
@@ -1458,74 +1389,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PWSID</th>\n",
-       "      <th>PRIMARY_SOURCE_CODE</th>\n",
-       "      <th>OWNER_TYPE_CODE</th>\n",
-       "      <th>SERVICE_CONNECTIONS_COUNT</th>\n",
-       "      <th>COUNTIES_SERVED</th>\n",
-       "      <th>all_violations</th>\n",
-       "      <th>health_violations</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>NJ0102001</td>\n",
-       "      <td>SW</td>\n",
-       "      <td>L</td>\n",
-       "      <td>7775</td>\n",
-       "      <td>Atlantic</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         PWSID PRIMARY_SOURCE_CODE OWNER_TYPE_CODE  SERVICE_CONNECTIONS_COUNT  \\\n",
-       "119  NJ0102001                  SW               L                       7775   \n",
-       "\n",
-       "    COUNTIES_SERVED  all_violations  health_violations  \n",
-       "119        Atlantic             6.0                0.0  "
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# To delete\n",
-    "sdwa_vios_merged[sdwa_vios_merged.PWSID=='NJ0102001']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 145,
    "metadata": {},
    "outputs": [
@@ -1547,28 +1410,8 @@
     }
    ],
    "source": [
+    "# Explore the dataset\n",
     "pws_clean.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'SW', 'GW', 'GU', 'GWP', 'SWP'}\n",
-      "{'L', 'S', 'P', 'F', 'M'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Write out full names for codes\n",
-    "# Identyify a full list of codes\n",
-    "print(set(sdwa_vios_merged['PRIMARY_SOURCE_CODE']))\n",
-    "print(set(sdwa_vios_merged['OWNER_TYPE_CODE']))"
    ]
   },
   {
@@ -1613,74 +1456,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PWSID</th>\n",
-       "      <th>PRIMARY_SOURCE_CODE</th>\n",
-       "      <th>OWNER_TYPE_CODE</th>\n",
-       "      <th>SERVICE_CONNECTIONS_COUNT</th>\n",
-       "      <th>COUNTIES_SERVED</th>\n",
-       "      <th>all_violations</th>\n",
-       "      <th>health_violations</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>NJ0102001</td>\n",
-       "      <td>SW</td>\n",
-       "      <td>L</td>\n",
-       "      <td>7775</td>\n",
-       "      <td>Atlantic</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         PWSID PRIMARY_SOURCE_CODE OWNER_TYPE_CODE  SERVICE_CONNECTIONS_COUNT  \\\n",
-       "119  NJ0102001                  SW               L                       7775   \n",
-       "\n",
-       "    COUNTIES_SERVED  all_violations  health_violations  \n",
-       "119        Atlantic             6.0                0.0  "
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# To delete\n",
-    "sdwa_vios_merged[sdwa_vios_merged.PWSID=='NJ0102001']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 150,
    "metadata": {},
    "outputs": [],
@@ -1692,10 +1467,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'SW', 'GW', 'GU', 'GWP', 'SWP'}\n",
+      "{'L', 'S', 'P', 'F', 'M'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify the full list of codes in order to convert to full names\n",
+    "print(set(sdwa_vios_merged['PRIMARY_SOURCE_CODE']))\n",
+    "print(set(sdwa_vios_merged['OWNER_TYPE_CODE']))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create dictionaries with the codes\n",
     "psc = {'GW': 'Ground water', \n",
     "       'SW': 'Surface water', \n",
     "       'SWP': 'Surface water purchased', \n",
@@ -1856,81 +1652,6 @@
    ],
    "source": [
     "sdwa_vios_merged.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PWSID</th>\n",
-       "      <th>PRIMARY_SOURCE_CODE</th>\n",
-       "      <th>OWNER_TYPE_CODE</th>\n",
-       "      <th>SERVICE_CONNECTIONS_COUNT</th>\n",
-       "      <th>COUNTIES_SERVED</th>\n",
-       "      <th>all_violations</th>\n",
-       "      <th>health_violations</th>\n",
-       "      <th>primary_source</th>\n",
-       "      <th>owner_type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>NJ0102001</td>\n",
-       "      <td>SW</td>\n",
-       "      <td>L</td>\n",
-       "      <td>7775</td>\n",
-       "      <td>Atlantic</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Surface water</td>\n",
-       "      <td>Local Government</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         PWSID PRIMARY_SOURCE_CODE OWNER_TYPE_CODE  SERVICE_CONNECTIONS_COUNT  \\\n",
-       "119  NJ0102001                  SW               L                       7775   \n",
-       "\n",
-       "    COUNTIES_SERVED  all_violations  health_violations primary_source  \\\n",
-       "119        Atlantic               6                  0  Surface water   \n",
-       "\n",
-       "           owner_type  \n",
-       "119  Local Government  "
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# To delete\n",
-    "sdwa_vios_merged[sdwa_vios_merged.PWSID=='NJ0102001']"
    ]
   },
   {
