--- a/spatial_analysis/areal_weighting.ipynb
+++ b/spatial_analysis/areal_weighting.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\zstat\\Anaconda2\\envs\\py36\\lib\\site-packages\\pysal\\__init__.py:65: VisibleDeprecationWarning: PySAL's API will be changed on 2018-12-31. The last release made with this API is version 1.14.4. A preview of the next API version is provided in the `pysal` 2.0 prelease candidate. The API changes and a guide on how to change imports is provided at https://migrating.pysal.org\n",
+      "  ), VisibleDeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
@@ -3004,17 +3013,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Open water system data containing results from the areal weighting analysis \n",
-    "areal_weighting_pws = gpd.read_file('..\\Data\\Created\\SpatialAnalysis\\ArealWeighting.shp')"
+    "areal_weighting_pws = gpd.read_file('../data/Created/SpatialAnalysis/ArealWeighting.shp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3124,7 +3133,7 @@
        "4  0.135016  0.247196  POLYGON ((383871.0728139255 228984.5435644306,...  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3135,17 +3144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Open urban/rural file\n",
-    "pws_urban_rural = pd.read_csv('..\\Data\\Created\\SpatialAnalysis\\pws_urban_rural.csv')"
+    "pws_urban_rural = pd.read_csv('../data/Created/SpatialAnalysis/pws_urban_rural.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3186,7 +3195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3309,7 +3318,7 @@
        "4       rural  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3329,7 +3338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3372,8 +3381,8 @@
        "      <td>L</td>\n",
        "      <td>10</td>\n",
        "      <td>Morris</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
        "      <td>Ground water</td>\n",
        "      <td>Local Government</td>\n",
        "    </tr>\n",
@@ -3384,8 +3393,8 @@
        "      <td>L</td>\n",
        "      <td>4350</td>\n",
        "      <td>Morris</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
        "      <td>Ground water</td>\n",
        "      <td>Local Government</td>\n",
        "    </tr>\n",
@@ -3396,8 +3405,8 @@
        "      <td>L</td>\n",
        "      <td>2253</td>\n",
        "      <td>Ocean</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>Ground water</td>\n",
        "      <td>Local Government</td>\n",
        "    </tr>\n",
@@ -3408,8 +3417,8 @@
        "      <td>L</td>\n",
        "      <td>933</td>\n",
        "      <td>Ocean</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>Ground water</td>\n",
        "      <td>Local Government</td>\n",
        "    </tr>\n",
@@ -3420,8 +3429,8 @@
        "      <td>L</td>\n",
        "      <td>4600</td>\n",
        "      <td>Hunterdon</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "      <td>Ground water</td>\n",
        "      <td>Local Government</td>\n",
        "    </tr>\n",
@@ -3438,11 +3447,11 @@
        "4  NJ1005001                  GW               L                       4600   \n",
        "\n",
        "  COUNTIES_SERVED  all_violations  health_violations primary_source  \\\n",
-       "0          Morris            30.0                0.0   Ground water   \n",
-       "1          Morris             5.0                0.0   Ground water   \n",
-       "2           Ocean             1.0                1.0   Ground water   \n",
-       "3           Ocean             1.0                0.0   Ground water   \n",
-       "4       Hunterdon             4.0                0.0   Ground water   \n",
+       "0          Morris              30                  0   Ground water   \n",
+       "1          Morris               5                  0   Ground water   \n",
+       "2           Ocean               1                  1   Ground water   \n",
+       "3           Ocean               1                  0   Ground water   \n",
+       "4       Hunterdon               4                  0   Ground water   \n",
        "\n",
        "         owner_type  \n",
        "0  Local Government  \n",
@@ -3452,20 +3461,20 @@
        "4  Local Government  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sdwa_vios = pd.read_csv('..\\data\\Created\\SDWIS\\sdwa_vios_complete.csv')\n",
+    "sdwa_vios = pd.read_csv('../data/Created/SDWIS/sdwa_vios_complete.csv')\n",
     "sdwa_vios = sdwa_vios.rename(columns={'PWSID': \"PWID\"})\n",
     "sdwa_vios.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3476,7 +3485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3493,7 +3502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3501,27 +3510,27 @@
      "output_type": "stream",
      "text": [
       "<class 'geopandas.geodataframe.GeoDataFrame'>\n",
-      "Int64Index: 455 entries, 0 to 454\n",
+      "Int64Index: 456 entries, 0 to 455\n",
       "Data columns (total 17 columns):\n",
-      "PWID                         455 non-null object\n",
-      "PWS_area                     455 non-null float64\n",
-      "PWS_total_                   455 non-null float64\n",
-      "PWS_pov_po                   455 non-null float64\n",
-      "PWS_POC_po                   455 non-null float64\n",
-      "perc_pov                     455 non-null float64\n",
-      "perc_POC                     455 non-null float64\n",
-      "geometry                     455 non-null object\n",
-      "urban_rural                  455 non-null object\n",
-      "PRIMARY_SOURCE_CODE          455 non-null object\n",
-      "OWNER_TYPE_CODE              455 non-null object\n",
-      "SERVICE_CONNECTIONS_COUNT    455 non-null int64\n",
-      "COUNTIES_SERVED              455 non-null object\n",
-      "all_violations               455 non-null int64\n",
-      "health_violations            455 non-null int64\n",
-      "primary_source               455 non-null object\n",
-      "owner_type                   455 non-null object\n",
+      "PWID                         456 non-null object\n",
+      "PWS_area                     456 non-null float64\n",
+      "PWS_total_                   456 non-null float64\n",
+      "PWS_pov_po                   456 non-null float64\n",
+      "PWS_POC_po                   456 non-null float64\n",
+      "perc_pov                     456 non-null float64\n",
+      "perc_POC                     456 non-null float64\n",
+      "geometry                     456 non-null object\n",
+      "urban_rural                  456 non-null object\n",
+      "PRIMARY_SOURCE_CODE          456 non-null object\n",
+      "OWNER_TYPE_CODE              456 non-null object\n",
+      "SERVICE_CONNECTIONS_COUNT    456 non-null int64\n",
+      "COUNTIES_SERVED              456 non-null object\n",
+      "all_violations               456 non-null int64\n",
+      "health_violations            456 non-null int64\n",
+      "primary_source               456 non-null object\n",
+      "owner_type                   456 non-null object\n",
       "dtypes: float64(6), int64(3), object(8)\n",
-      "memory usage: 64.0+ KB\n"
+      "memory usage: 64.1+ KB\n"
      ]
     }
    ],
@@ -3531,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3542,7 +3551,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform to epsg:3857\n",
+    "aw_pws_sdwa = aw_pws_sdwa.to_crs({'init': 'epsg:3857'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3595,7 +3614,7 @@
        "      <td>24513.210106</td>\n",
        "      <td>0.414386</td>\n",
        "      <td>0.862450</td>\n",
-       "      <td>(POLYGON ((497860.4602464174 196288.4292888343...</td>\n",
+       "      <td>(POLYGON ((inf inf, inf inf, inf inf, inf inf,...</td>\n",
        "      <td>urban</td>\n",
        "      <td>SW</td>\n",
        "      <td>L</td>\n",
@@ -3615,7 +3634,7 @@
        "      <td>368.488183</td>\n",
        "      <td>0.116388</td>\n",
        "      <td>0.140297</td>\n",
-       "      <td>(POLYGON ((515752.6858546621 202163.5393238475...</td>\n",
+       "      <td>(POLYGON ((inf inf, inf inf, inf inf, inf inf,...</td>\n",
        "      <td>urban</td>\n",
        "      <td>GW</td>\n",
        "      <td>L</td>\n",
@@ -3635,7 +3654,7 @@
        "      <td>678.052804</td>\n",
        "      <td>0.106998</td>\n",
        "      <td>0.343254</td>\n",
-       "      <td>(POLYGON ((358984.6680578727 246157.0587467105...</td>\n",
+       "      <td>(POLYGON ((inf inf, inf inf, inf inf, inf inf,...</td>\n",
        "      <td>urban</td>\n",
        "      <td>GW</td>\n",
        "      <td>L</td>\n",
@@ -3655,7 +3674,7 @@
        "      <td>0.650936</td>\n",
        "      <td>0.135016</td>\n",
        "      <td>0.247196</td>\n",
-       "      <td>(POLYGON ((382017.3487498079 264208.1571022005...</td>\n",
+       "      <td>(POLYGON ((inf inf, inf inf, inf inf, inf inf,...</td>\n",
        "      <td>rural</td>\n",
        "      <td>GW</td>\n",
        "      <td>P</td>\n",
@@ -3675,7 +3694,7 @@
        "      <td>1.357856</td>\n",
        "      <td>0.135016</td>\n",
        "      <td>0.247196</td>\n",
-       "      <td>(POLYGON ((383871.0728139255 228984.5435644306...</td>\n",
+       "      <td>(POLYGON ((inf inf, inf inf, inf inf, inf inf,...</td>\n",
        "      <td>rural</td>\n",
        "      <td>GW</td>\n",
        "      <td>P</td>\n",
@@ -3699,11 +3718,11 @@
        "4  NJ0105002  8.502179e+05      5.493043      0.741649      1.357856   \n",
        "\n",
        "   perc_pov  perc_POC                                           geometry  \\\n",
-       "0  0.414386  0.862450  (POLYGON ((497860.4602464174 196288.4292888343...   \n",
-       "1  0.116388  0.140297  (POLYGON ((515752.6858546621 202163.5393238475...   \n",
-       "2  0.106998  0.343254  (POLYGON ((358984.6680578727 246157.0587467105...   \n",
-       "3  0.135016  0.247196  (POLYGON ((382017.3487498079 264208.1571022005...   \n",
-       "4  0.135016  0.247196  (POLYGON ((383871.0728139255 228984.5435644306...   \n",
+       "0  0.414386  0.862450  (POLYGON ((inf inf, inf inf, inf inf, inf inf,...   \n",
+       "1  0.116388  0.140297  (POLYGON ((inf inf, inf inf, inf inf, inf inf,...   \n",
+       "2  0.106998  0.343254  (POLYGON ((inf inf, inf inf, inf inf, inf inf,...   \n",
+       "3  0.135016  0.247196  (POLYGON ((inf inf, inf inf, inf inf, inf inf,...   \n",
+       "4  0.135016  0.247196  (POLYGON ((inf inf, inf inf, inf inf, inf inf,...   \n",
        "\n",
        "  urban_rural PRIMARY_SOURCE_CODE OWNER_TYPE_CODE  SERVICE_CONNECTIONS_COUNT  \\\n",
        "0       urban                  SW               L                       7775   \n",
@@ -3727,7 +3746,7 @@
        "4           Private  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3751,7 +3770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3764,15 +3783,8 @@
     }
    ],
    "source": [
-    "aw_pws_sdwa.to_file('..\\Data\\Created\\SpatialAnalysis\\AW_vios.geojson', driver='GeoJSON')"
+    "aw_pws_sdwa.to_file('../data/Created/SpatialAnalysis/AW_vios.geojson', driver='GeoJSON')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -3791,7 +3803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
