--- a/spatial_analysis/urban_rural.ipynb
+++ b/spatial_analysis/urban_rural.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,14 +169,14 @@
        "4  POLYGON ((-119.869132 36.430832, -119.870931 3...  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Open urban areas shapefile\n",
-    "urban_area = gpd.read_file('../Data/TIGER/tl_2016_us_uac10.shp')\n",
+    "urban_area = gpd.read_file('../data/TIGER/tl_2016_us_uac10.shp')\n",
     "\n",
     "# Examine the data\n",
     "urban_area.head()"
@@ -184,17 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import NJ public water system data\n",
-    "pws_geodata = gpd.read_file('../Data/NJDEP/New_Jersey__Public_Community_Water_Purveyor_Service_Areas.shp')"
+    "pws_geodata = gpd.read_file('../data/NJDEP/NJPWS.shp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Produce an intersection of the two datasets\n",
+    "urban_pws_intersection = gpd.overlay(pws_geodata, urban_area, how=\"intersection\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -245,31 +255,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>NJ0314001</td>\n",
        "      <td>9.054935e+06</td>\n",
        "      <td>POLYGON ((429152.770478677 476819.609905608, 4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>6</th>\n",
        "      <td>NJ0307002</td>\n",
        "      <td>5.953241e+06</td>\n",
        "      <td>POLYGON ((441972.9741689265 483150.4371389374,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>103</th>\n",
+       "      <th>102</th>\n",
        "      <td>NJ0303001</td>\n",
        "      <td>2.129090e+08</td>\n",
        "      <td>(POLYGON ((436626.6899140105 491361.7796401083...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>121</th>\n",
+       "      <th>120</th>\n",
        "      <td>NJ0318002</td>\n",
        "      <td>1.748216e+07</td>\n",
        "      <td>POLYGON ((422943.0493023433 451971.7819766924,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>265</th>\n",
+       "      <th>264</th>\n",
        "      <td>NJ0323001</td>\n",
        "      <td>2.111025e+07</td>\n",
        "      <td>(POLYGON ((445841.6839511767 455734.1146751046...</td>\n",
@@ -280,29 +290,26 @@
       ],
       "text/plain": [
        "          PWID    urban_area  \\\n",
-       "1    NJ0314001  9.054935e+06   \n",
-       "7    NJ0307002  5.953241e+06   \n",
-       "103  NJ0303001  2.129090e+08   \n",
-       "121  NJ0318002  1.748216e+07   \n",
-       "265  NJ0323001  2.111025e+07   \n",
+       "0    NJ0314001  9.054935e+06   \n",
+       "6    NJ0307002  5.953241e+06   \n",
+       "102  NJ0303001  2.129090e+08   \n",
+       "120  NJ0318002  1.748216e+07   \n",
+       "264  NJ0323001  2.111025e+07   \n",
        "\n",
        "                                              geometry  \n",
-       "1    POLYGON ((429152.770478677 476819.609905608, 4...  \n",
-       "7    POLYGON ((441972.9741689265 483150.4371389374,...  \n",
-       "103  (POLYGON ((436626.6899140105 491361.7796401083...  \n",
-       "121  POLYGON ((422943.0493023433 451971.7819766924,...  \n",
-       "265  (POLYGON ((445841.6839511767 455734.1146751046...  "
+       "0    POLYGON ((429152.770478677 476819.609905608, 4...  \n",
+       "6    POLYGON ((441972.9741689265 483150.4371389374,...  \n",
+       "102  (POLYGON ((436626.6899140105 491361.7796401083...  \n",
+       "120  POLYGON ((422943.0493023433 451971.7819766924,...  \n",
+       "264  (POLYGON ((445841.6839511767 455734.1146751046...  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Produce an intersection of the two datasets\n",
-    "urban_pws_intersection = gpd.overlay(pws_geodata, urban_area, how=\"intersection\")\n",
-    "\n",
     "urban_pws_intersection['urban_area'] = urban_pws_intersection.geometry.area\n",
     "\n",
     "urban_pws_int = urban_pws_intersection[['PWID','urban_area','geometry']]\n",
@@ -311,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +530,7 @@
        "4  NJ0325001       rural"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,12 +543,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export to csv\n",
-    "pws_urban_rural.to_csv('..\\Data\\Created\\SpatialAnalysis\\pws_urban_rural.csv', index = False)"
+    "pws_urban_rural.to_csv('../data/Created/SpatialAnalysis/pws_urban_rural.csv', index = False)"
    ]
   }
  ],
